--- a/views/fullEvent.pug
+++ b/views/fullEvent.pug
@@ -7,7 +7,7 @@ block content
     .hr-line
   .my-container
     .row
-      .col-sm-offset-1.col-sm-6.col-lg-offset-0.col-lg-7.responsive-image
+      .col-sm-offset-1.col-sm-6.col-lg-offset-0.col-lg-8.responsive-image
       
         #article-photo-carousel.img-responsive.carousel.slide
           .img-responsive.carousel-inner.cont-slider
@@ -15,7 +15,7 @@ block content
             img(src= retiros.imageUrl, width="100%" height="100%" class="image1")
          
            
-      .col-sm-4.col-lg-5.responsive-image
+      .col-sm-4.responsive-image
         .panel.panel-yellow
           .panel-heading.text-center Detalles
           .panel-body
