--- a/public/sass/_detailEvent.sass
+++ b/public/sass/_detailEvent.sass
@@ -21,6 +21,9 @@
 .image1
   max-width: 831px  !important
   border-radius: 6px 6px 0 0
+  margin-left: 8px
+  margin-top: 0px
+  margin-bottom: -50px
 .image2
   width: 300px
   height: 300px
@@ -35,19 +38,15 @@
     border: 2px solid #428BCA
     opacity: 0.7
 
-.my-container 
-  padding-right: 100px
-  padding-left: 100px
-  margin-right: auto
-  margin-left: auto
-  margin-top: -120px
+
+ 
 
 .my-container2 
   padding-right: 100px
   padding-left: 100px
   margin-right: auto
   margin-left: auto
-  margin-top: -100px
+  
  
 .thumbnail
   margin-top: 20px
@@ -64,18 +63,15 @@
   background-color: #f8af00
 
 .panel-two
-  padding-left: 58px 
-  margin-top: -164px
+  padding-left: 0px 
+  margin-top: -80px
   padding-right: 16px 
 .share
   padding-left: 58px 
   margin-top: 4px
   padding-right: 16px 
 
-.panel-bottom
-  padding-left: 44px
-  margin-top: -182px
-  padding-right: 15px
+
 
 .my-panel
   
@@ -103,11 +99,8 @@
   padding-right: 20px
   margin-left: 890px
 
-.panel-five
-  margin-top: 0px 
-  margin-right: 0px
-  padding-right: 20px
-  margin-left: 890px
+
+
   
 .panel-body
 
@@ -206,3 +199,12 @@ hr
   margin-top: -124px
   width: 573px
   margin-right: 92px
+
+
+
+
+.details-event
+  display:flex
+  background-color: #f8f8f8
+  ul 
+    list-style: none
