in progress responsive design

--- a/public/sass/_detailEvent.sass
+++ b/public/sass/_detailEvent.sass
@@ -23,7 +23,7 @@
   border-radius: 6px 6px 0 0
   margin-left: 8px
   margin-top: 0px
-  margin-bottom: -50px
+ 
 .image2
   width: 300px
   height: 300px
@@ -55,7 +55,7 @@
   border-radius: 3px
   box-shadow: 0px 0px 10px #888
   border-color: #EFA13D
-  margin-top: 160px
+  
 
 .panel-heading
   border-radius: 3px
@@ -64,7 +64,7 @@
 
 .panel-two
   padding-left: 0px 
-  margin-top: -80px
+  margin-top: 22px
   padding-right: 16px 
 .share
   padding-left: 58px 
@@ -102,7 +102,11 @@
 
 
   
-.panel-body
+div.panel-body 
+  background-color: white !important
+  border-radius: 0px !important
+  height: 100%
+
 
   background-color: #f8f8f8
   color: #4D4D4D
@@ -205,6 +209,6 @@ hr
 
 .details-event
   display:flex
-  background-color: #f8f8f8
+  
   ul 
     list-style: none
