--- a/public/css/style.css
+++ b/public/css/style.css
@@ -905,8 +905,7 @@ body {
   max-width: 831px !important;
   border-radius: 6px 6px 0 0;
   margin-left: 8px;
-  margin-top: 0px;
-  margin-bottom: -50px; }
+  margin-top: 0px; }
 
 .image2 {
   width: 300px;
@@ -934,8 +933,7 @@ body {
 .panel.panel-yellow {
   border-radius: 3px;
   box-shadow: 0px 0px 10px #888;
-  border-color: #EFA13D;
-  margin-top: 160px; }
+  border-color: #EFA13D; }
 
 .panel-heading {
   border-radius: 3px;
@@ -944,7 +942,7 @@ body {
 
 .panel-two {
   padding-left: 0px;
-  margin-top: -80px;
+  margin-top: 22px;
   padding-right: 16px; }
 
 .share {
@@ -980,7 +978,10 @@ body {
   padding-right: 20px;
   margin-left: 890px; }
 
-.panel-body {
+div.panel-body {
+  background-color: white !important;
+  border-radius: 0px !important;
+  height: 100%;
   background-color: #f8f8f8;
   color: #4D4D4D; }
 
@@ -1077,10 +1078,8 @@ hr {
   width: 573px;
   margin-right: 92px; }
 
-.details-event {
-  background-color: #f8f8f8; }
-  .details-event ul {
-    list-style: none; }
+.details-event ul {
+  list-style: none; }
 
 .social-cont {
   border-style: solid;
