--- a/public/sass/_detailEvent.sass
+++ b/public/sass/_detailEvent.sass
@@ -21,7 +21,7 @@
 .image1
   max-width: 831px  !important
   border-radius: 6px 6px 0 0
-  margin-left: 8px
+  margin-left: 19px
   margin-top: 0px
  
 .image2
@@ -65,16 +65,13 @@
 .panel-two
   padding-left: 0px 
   margin-top: 22px
-  padding-right: 16px 
+  padding-right: 0px 
 .share
   padding-left: 58px 
   margin-top: 4px
   padding-right: 16px 
 
-
-
-.my-panel
-  
+.my-panel 
   margin-left: 0px !important
   padding-left: 15px !important
 .margin-text
@@ -85,31 +82,15 @@
 
 #sahre
   padding-left: 126px!important
-.panel-three
-  float: right
-  width: 781px
-  margin-top: -164px 
-  margin-right: -90px
-  padding-right: 204px
-  margin-left: 926px
-  
-.panel-four 
-  margin-top: 270px 
-  margin-right: 0px
-  padding-right: 20px
-  margin-left: 890px
-
-
-
-  
+ 
 div.panel-body 
   background-color: white !important
   border-radius: 0px !important
   height: 100%
-
-
-  background-color: #f8f8f8
   color: #4D4D4D
+  padding: 0px !important
+.panel-tag
+  padding: 15px
 hr
   background-color: #f8af00
 
@@ -187,9 +168,7 @@ hr
   border-radius: 25px
   opacity: 0.6
   padding-top: 0px
-#ubic
-  margin-top: -82px
-  max-width: 561px
+
 .bottom-map
   height: 280px
 .events-link
@@ -199,16 +178,17 @@ hr
 .responsive-image
   margin-top: -47px
 #ubic
-  float: right
-  margin-top: -124px
   width: 573px
-  margin-right: 92px
 
+.file-event
+  margin-right: -10px !important
+  margin-left: -10px !important
 
 
 
 .details-event
   display:flex
-  
+  padding-left: 0px !important
   ul 
     list-style: none
+    margin-top: 15px !important
