--- a/public/sass/_detailEvent.sass
+++ b/public/sass/_detailEvent.sass
@@ -98,7 +98,12 @@ hr
 .social-nav
   padding: 0
   list-style: none
-  margin: -10px 0 0 -10px
+  display: flex
+  justify-content: center
+  margin: 10px
+  ul
+    padding-left: 0px
+  
   li
     float: left
     margin: 10px 0 0 10px
