--- a/views/fullEvent.pug
+++ b/views/fullEvent.pug
@@ -61,30 +61,31 @@ block content
         .row.file-event
           div.col-sm-12
             .panel.panel-yellow
-               .panel-heading.text-center Compartir
-               .my-panel.social#sahre
-                  .social-nav    
-                    ul
-                      li
-                        a.twitter( target='_blank', title='Twitter', rel='nofollow' href='https://twitter.com/share', data-via='mariuCSS') 
-                          script.
-                                        !function(d,s,id){
-                                        var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
-                                        if(!d.getElementById(id)){
-                                        js=d.createElement(s);
-                                        js.id=id;
-                                        js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');')
-                          i.fa.fa-twitter
-                      li
-                        a.facebook(target='_blank', title='Facebook', rel='nofollow', onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", href=' http://www.facebook.com/share?url=http://encuentratucamino.herokuapp.com/details/'+ retiros._id) 
+              .panel-heading.text-center Compartir
+              .panel-body.my-panel
+                .social-nav
+                 ul
+                  li
+                    a.twitter( target='_blank', title='Twitter', rel='nofollow' href='https://twitter.com/share', data-via='mariuCSS') 
+                            script.
+                                          !function(d,s,id){
+                                          var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
+                                          if(!d.getElementById(id)){
+                                          js=d.createElement(s);
+                                          js.id=id;
+                                          js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');')
+                            i.fa.fa-twitter
+                    li
+                      a.facebook(target='_blank', title='Facebook', rel='nofollow', onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", href=' http://www.facebook.com/share?url=http://encuentratucamino.herokuapp.com/details/'+ retiros._id) 
 
-                          i.fa.fa-facebook
-                         
-                      li
-                        a.google(target='_blank', title='Google plus', rel='nofollow',onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", href='https://plus.google.com/share?url=http://encuentratucamino.herokuapp.com/details/'+ retiros._id) 
+                            i.fa.fa-facebook    
+                           
+                    li
+                      a.google(target='_blank', title='Google plus', rel='nofollow',onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", href='https://plus.google.com/share?url=http://encuentratucamino.herokuapp.com/details/'+ retiros._id) 
 
-                          i.fa.fa-google-
-
+                            i.fa.fa-google- 
+                           
+                                
     
             
 
