--- a/public/css/style.css
+++ b/public/css/style.css
@@ -940,9 +940,7 @@ body {
   background-color: #f8af00; }
 
 .panel-two {
-  padding-left: 0px;
-  margin-top: 22px;
-  padding-right: 0px; }
+  margin-top: 22px; }
 
 .share {
   padding-left: 58px;
@@ -1064,8 +1062,7 @@ hr {
   width: 573px; }
 
 .file-event {
-  margin-right: -10px !important;
-  margin-left: -10px !important; }
+  margin-right: 0px !important; }
 
 .details-event {
   padding-left: 0px !important; }
