finally responsive design detailevent

--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -238,7 +238,10 @@ div.form-group.label-taller
   @media screen and (min-width:100px) and (max-width: 400px)
     font-size: 20px
     margin-top: -28px !important
-
+  @media screen and (min-width:412px) and (max-width: 732px)
+    margin-left: 15px
+  @media screen and (min-width:360px) and (max-width: 640px)
+    margin-left: 15px
   font-size: 40px
   color: #062f4a
   span
@@ -388,8 +391,10 @@ div.form-group.label-taller
     position: relative
   @media screen and (min-width:768px) and (max-width: 1024px)
     position: fixed
-
-
+  @media screen and (min-width:1024px) and (max-width: 1366px)
+    position: relative
+  @media screen and (min-width:768px) and (max-width: 1024px)
+    position: relative
 
 
   .localitation
