--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -156,6 +156,8 @@ label.size-categories
   a
     text-decoration: none
     color: #062f4a
+    @media screen and (min-width:320px) and (max-width: 568px)
+      font-size: 15px
   @media screen and (min-width:100px) and (max-width: 725px)
     margin-top: 0px 
   margin-top: 45px
@@ -242,6 +244,8 @@ div.form-group.label-taller
     margin-left: 15px
   @media screen and (min-width:360px) and (max-width: 640px)
     margin-left: 15px
+  @media screen and (min-width:320px) and (max-width: 568px)
+    font-size: 30px
   font-size: 40px
   color: #062f4a
   span
@@ -351,15 +355,8 @@ div.form-group.label-taller
 
 .box
   font-family: News Cycle
-.cont-body
-  margin-top: 20px !important
-  margin-left: 100px
-  
 
-.cont-body
-  width: 1100px
-  height: 60px
-
+ 
 .pre-footer
   margin: 0px
   height: 100%
@@ -390,7 +387,7 @@ div.form-group.label-taller
   @media screen and (min-width:300px) and (max-width: 700px)
     position: relative
   @media screen and (min-width:768px) and (max-width: 1024px)
-    position: fixed
+    position: relative
   @media screen and (min-width:1024px) and (max-width: 1366px)
     position: relative
   @media screen and (min-width:768px) and (max-width: 1024px)
