--- a/views/myAcount.pug
+++ b/views/myAcount.pug
@@ -33,9 +33,9 @@ block content
                 |  Crear anuncio
             .row.cont-body
 
-              .col-sm-6.col-md-12
+              div.col-sm-12
                 each retiro in retiros
-                  .thumbnail.offer.margins.col-sm-6.col-md-3.retiro
+                  .thumbnail.offer.margins.col-sm-3.retiro
                     img(src=retiro.imageUrl, width='100%')
                     .caption
                       div.container.size-mods
