--- a/public/sass/_mycount.sass
+++ b/public/sass/_mycount.sass
@@ -25,4 +25,33 @@ p a
 .sizes
 	font-size: 15px !important
 
-	
+.cont-body
+	width: 1100px
+	height: 60px
+	margin-top: 20px !important
+	margin-left: 100px
+	@media screen and (min-width:414px) and (max-width: 736px)
+		width: 100%
+		height: 100%
+		margin-left: 0px
+	@media screen and (min-width:768px) and (max-width: 1024px)		
+		margin-left: 100px
+	@media screen and (min-width:375px) and (max-width: 667px)
+		width: 50%
+		height: 50%
+		margin-left: 0px
+	@media screen and (min-width:320px) and (max-width: 568px)
+		width: 100%
+		height: 100%
+		margin: auto 0px		
+h3
+	@media screen and (min-width:414px) and (max-width: 736px)		
+		font-size: 17px !important
+	@media screen and (min-width:375px) and (max-width: 667px)		
+		font-size: 17px
+		margin-top: 74px
+		text-align: center
+	@media screen and (min-width:320px) and (max-width: 568px)			
+		font-size: 17px
+		margin-top: 74px
+		text-align: center
