--- a/views/home.pug
+++ b/views/home.pug
@@ -85,7 +85,7 @@ block content
               img.img-carrusel.img-opac(src='../img/maestros.gif')
               .carousel-caption
                 .form-group.label-taller.font-retiro
-                  p.text-center.font-categories.size-title-categories Maestros 
+                  p.text-center.font-categories.size-title-categories Instructores 
                   .col-xs-12  
                     form(action='/', method='POST')
                       label.label-taller.size-categories.media(for='sel1') Selecciona una categoria&nbsp; 
@@ -123,6 +123,6 @@ block content
             li(data-target='#myCarousel', data-slide-to='4')
               a(href='#')
                 i.glyphicon.glyphicon-user
-                |  Maestros espirituales
+                |  Instructores
 
           
