--- a/views/myAcount.pug
+++ b/views/myAcount.pug
@@ -11,7 +11,7 @@ block content
         li
           a(href='/acount')  Mis anuncios en encuentra tu camino
       if user
-        h3 HOLA #{user.username} !
+        h3.hellow HOLA #{user.username} !
      
       else
         h3 You are NOT logged!
@@ -163,7 +163,7 @@ block content
           h4.panel-title
             a.collapsed(role='button', data-toggle='collapse', data-parent='#accordion', href='#collapseFive', aria-expanded='false', aria-controls='collapseFive')
               i.more-less.glyphicon.glyphicon-plus
-              |  Maestros espirituales
+              |  Instructores
         #collapseFive.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingFive')
           .panel-body
             aside.text-right
