--- a/views/Allretiros.pug
+++ b/views/Allretiros.pug
@@ -41,8 +41,9 @@ block content
               hr
                 
               div.iter
-                div#lat(hidden) #{retiro.lat}
-                div#long(hidden) #{retiro.long}
+                div.lat.hidden #{retiro.lat}
+                div.long.hidden #{retiro.long}
+                
               img(src='https://maxcdn.icons8.com/Android_L/PNG/24/Ecommerce/price_tag-24.png', title='Price Tag', width='24')
               |   #{retiro.tags} 
       if !retiros.length
@@ -62,6 +63,6 @@ block content
       script(src='/js/allMaps.js')
       script(src='/js/filters.js')
           
-      script(src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyD2CtWqsM0k23XnQMwJQXASOmNEkE8IAgM&callback=initMap')
+      script(src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyD2CtWqsM0k23XnQMwJQXASOmNEkE8IAgM&callback=viewMap')
       script(src='/js/insert-title.js')
            
