--- a/views/add-event.pug
+++ b/views/add-event.pug
@@ -87,7 +87,7 @@ block content
             fieldset.form-group
               label(for='recipetitle') Localidad
               |
-              input#address.form-control(rows='1',type="textbox", maxlength='30', name="localitation" value= !retiros ? " " : retiros.localitation  )
+              input#pac-input.controls.form-control(rows='1',type="textbox", maxlength='30', name="localitation" value= !retiros ? " " : retiros.localitation  )
               input#submit(type='button', value='Buscar')
                
               #map
