--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -392,6 +392,12 @@ div.form-group.label-taller
     position: relative
   @media screen and (min-width:768px) and (max-width: 1024px)
     position: relative
+  @media screen and (min-width:1680px) and (max-width: 1050px)
+    position: relative
+  @media screen and (min-width:2560px) and (max-width: 1440px)
+    position: relative
+  @media screen and (min-width:1600px) and (max-width: 900px)
+    position: relative
 
 
   .localitation
