--- a/views/Allretiros.pug
+++ b/views/Allretiros.pug
@@ -5,9 +5,17 @@ block content
     
     
       
-    .col-md-6.responsive
-      img(src='/img/search.png', width='26px', height='26px').ino 
-      input#search.intros( type="text" placeholder="indica el lugar") 
+    .col-sm-6.responsive
+      img(src='/img/search.png', width='26px', height='26px').ino
+      - var cities = ["Selecciona...", "Andalucía", "Baleares", "Canarias", "Cantabria", "Cataluña", "Galicia", "La Rioja", "Navarra", "Aragón", "Castilla-La Mancha", "Castilla y León", "Comunidad Valenciana", "Extremadura", "Comunidad Valenciana", "Madrid", "Región de Murcia"]; 
+      select#sel2.intros( name="comunity") 
+         each val in cities
+                  -
+                    let selectComunity = !retiros ? "" : retiros.comunity
+                  if (selectComunity === (val) )
+                    option(selected="selected")= selectComunity
+                  else
+                    option= val
       h1#title-mine.title-terapies|: #{retiros.length}
       .hr-line2
         br
@@ -18,13 +26,13 @@ block content
        each retiro in retiros
          
        
-          .col-md-6.col-lg-4.events-link
+          .col-sm-7.col-lg-4.events-link
 
             .thumbnail.offer.margins.links.hvr-grow-shadow
              a.image-a.img-responsive(href='/details/'+ retiro.id)
               img(src= retiro.imageUrl, width="201px" height="174px" class="image2")
               
-              h2#box.text-center
+              h2.tit#box.text-center
                 |#{retiro.title} 
               div
                 
@@ -51,17 +59,19 @@ block content
           h3 No se han encontrado retiros
         
          
-    .col-md-6
-      div#maps
+    .col-sm-5
+      .col.sm-12
+        div#maps
         
          
       
     
 
             
-              
+      script(src="/bower_components/jquery/dist/jquery.min.js")       
       script(src='/js/allMaps.js')
       script(src='/js/filters.js')
+      script(src='/js/SelectComunity.js')
           
       script(src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyD2CtWqsM0k23XnQMwJQXASOmNEkE8IAgM&callback=viewMap')
       script(src='/js/insert-title.js')
