--- a/public/sass/_register-login.sass
+++ b/public/sass/_register-login.sass
@@ -184,3 +184,10 @@ form input:invalid
   &:hover, &:focus
     color: #fff
     background-color: #2D3B55
+
+
+ul.list-Error 
+  list-style: none 
+
+ul.list-Succes
+  list-style: none 
