--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -437,4 +437,19 @@ div.form-group.label-taller
 //   width: auto  
 // header h1 a  
 //   width: auto  
-  
+.circle-ayurveda
+  margin: auto
+  border-radius: 127px
+  width: 200px
+  height: 200px
+  display: flex
+  justify-content: center
+  align-items: center
+  font-size: 40px
+  color: white
+  background-color: #f8af00
+  margin-bottom: 40px
+
+.title-bot
+  text-align: center
+  font-size: 40px
