--- a/views/home.pug
+++ b/views/home.pug
@@ -124,5 +124,16 @@ block content
               a(href='#')
                 i.glyphicon.glyphicon-user
                 |  Instructores
-
+    p#welcome-top
+      p.title-bot|¿Qué es la trinidad independiente de la vida? 
+    .col-sm-4
+      .col-sm-12
+        div.circle-ayurveda.font-categories|  Ayurveda
+    .col-sm-4
+      .col-sm-12
+        div.circle-ayurveda.font-categories|  Yoga
+    .col-sm-4
+      .col-sm-12
+        div.circle-ayurveda.font-categories|  Tantra
+    
           
