--- a/views/home.pug
+++ b/views/home.pug
@@ -126,6 +126,7 @@ block content
                 |  Instructores
     p#welcome-top
       p.title-bot|¿Qué es la trinidad independiente de la vida? 
+      p.text-bot| "Ayurveda, yoga y tantra son las disciplinas de la vida que se han practicado en la India durante siglos. El propósito de cada práctica es ayudar al individuo a conseguir longevidad, rejuvenecimiento y autorrealización."
     .col-sm-4
       .col-sm-12
         div.circle-ayurveda.font-categories|  Ayurveda
