--- a/views/myAcount.pug
+++ b/views/myAcount.pug
@@ -29,7 +29,7 @@ block content
         #collapseOne.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingOne')
           .panel-body
             aside.text-right
-              a(href='/acount/empty')
+              a(href='/acount-retiro/empty')
                 i.glyphicon.glyphicon-plus-sign
                 |  Crear anuncio
             .row.cont-body
@@ -41,7 +41,7 @@ block content
                     .caption
                       div.container.size-mods
                           h2.text-center 
-                          |Titulo: #{retiro.title}
+                          |Titulo: #{retiro.title}, #{retiro.mision}
                           p
                           i.glyphicon.glyphicon-calendar
                           | Fecha Public: #{retiro.createdEvent} 
@@ -131,7 +131,7 @@ block content
         #collapseTwo.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingTwo')
           .panel-body
             aside.text-right
-              a(href='/retiros/add')
+              a(href='/acount-formacion/empty')
                 i.glyphicon.glyphicon-plus-sign
                 |  Crear anuncio
       .panel.panel-default
@@ -143,7 +143,7 @@ block content
         #collapseThree.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingThree')
           .panel-body
             aside.text-right
-              a(href='/retiros/add')
+              a(href='/acount-taller/empty')
                 i.glyphicon.glyphicon-plus-sign
                 |  Crear anuncio
       .panel.panel-default
@@ -155,7 +155,7 @@ block content
         #collapseFour.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingFour')
           .panel-body
             aside.text-right
-              a(href='/retiros/add')
+              a(href='/acount-conferencia/empty')
                 i.glyphicon.glyphicon-plus-sign
                 |  Crear anuncio 
 
@@ -168,7 +168,7 @@ block content
         #collapseFive.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingFive')
           .panel-body
             aside.text-right
-              a(href='/retiros/add')
+              a(href='/acount-instructor/empty')
                 i.glyphicon.glyphicon-plus-sign
                 |  Crear anuncio 
               .container
