--- a/views/home.pug
+++ b/views/home.pug
@@ -14,7 +14,7 @@ block content
           // Wrapper for slides
           .carousel-inner
             .item.active
-              img.img-carrusel.img-opac(src='../img/retiros.gif')
+              img.img-responsive.img-carrusel.img-opac(src='../img/retiros.gif')
               .carousel-caption
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Retiros
